[metadata]
name = quayside
version = 0.1a1
author = Konstantin Weddige
url = https://github.com/weddige/quayside
classifiers=
    License :: OSI Approved :: MIT License
    Development Status :: 3 - Alpha
    Programming Language :: Python
    Topic :: Utilities

[options]
install_requires = 
    docker
    pyyaml
packages = find:

[options.entry_points]
console_scripts =
    quayside = quayside.__main__:main
